--- a/20241219_응답_개선_v0.5.5.ipynb
+++ b/20241219_응답_개선_v0.5.5.ipynb
@@ -225,7 +225,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note: ask_legal_question(user_question) Function을 사용 하셔야 하고, {user_input} 을 받아서 {response}을 웹에서 보여주시면 됩니다! (2024.12.19)"
+        "Note: ask_legal_question(user_question) Function을 사용 하셔야 하고, {user_question} 을 받아서 {response}을 웹에서 보여주시면 됩니다! (2024.12.19)"
       ],
       "metadata": {
         "id": "_JZ1Zy2CqyWz"
